--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                 </article>
                 <article class="col-b">
                     <div class="cards">
-                        <div class="card">
-                            <div data-aos="fade-up" class="card-body">
+                        <div data-aos="fade-right" class="card">
+                            <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-chart-pie"></i>
                                 </h2>
@@ -150,8 +150,8 @@
                                 </h3>
                             </div>
                         </div>
-                        <div class="card">
-                            <div data-aos="fade-up" class="card-body">
+                        <div data-aos="fade-left" class="card">
+                            <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-shield-halved"></i>
                                 </h2>
@@ -160,8 +160,8 @@
                                 </h3>
                             </div>
                         </div>
-                        <div class="card">
-                            <div data-aos="fade-up" class="card-body">
+                        <div data-aos="fade-right" class="card">
+                            <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-suitcase"></i>
                                 </h2>
@@ -170,8 +170,8 @@
                                 </h3>
                             </div>
                         </div>
-                        <div class="card">
-                            <div data-aos="fade-up" class="card-body">
+                        <div data-aos="fade-left" class="card">
+                            <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-chart-simple"></i>
                                 </h2>
@@ -180,8 +180,8 @@
                                 </h3>
                             </div>
                         </div>
-                        <div class="card">
-                            <div data-aos="fade-up" class="card-body">
+                        <div data-aos="fade-right" class="card">
+                            <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-compass"></i>
                                 </h2>
@@ -190,8 +190,8 @@
                                 </h3>
                             </div>
                         </div>
-                        <div class="card">
-                            <div data-aos="fade-up" class="card-body">
+                        <div data-aos="fade-left" class="card">
+                            <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-file-lines"></i>
                                 </h2>
