Finishing the Project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="brand">
                     <h1><a onclick="closeMenu()" href="#">Ws.</a></h1>
                 </div>
+
                 <div class="nav-menu">
                     <div class="menu">
                         <ul>
@@ -87,11 +88,6 @@
         <section id="about">
             <div class="container">
                 <article data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom" class="col-a">
-                    <img src="./assets/img/company/colaborators-working-together.jpg"
-                        alt="colaborators-working-together">
-                </article>
-                <article data-aos="fade-up"
                 data-aos-anchor-placement="center-bottom" class="col-b">
                     <h4>
                         About Us
@@ -117,11 +113,16 @@
                         <a href="#" class="btn">Read More</a>
                     </p>
                 </article>
+                <article data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom" class="col-a">
+                    <img src="./assets/img/company/colaborators-working-together.jpg"
+                        alt="colaborators-working-together">
+                </article>
             </div>
         </section>
         <section id="services">
-            <div data-aos="fade-right" class="container">
-                <article class="col-a">
+            <div class="container">
+                <article data-aos="fade-right" class="col-a">
                     <h4>
                         Feature
                     </h4>
@@ -140,7 +141,7 @@
                 </article>
                 <article class="col-b">
                     <div class="cards">
-                        <div data-aos="fade-right" class="card">
+                        <div data-aos="fade-down" class="card">
                             <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-chart-pie"></i>
@@ -150,7 +151,7 @@
                                 </h3>
                             </div>
                         </div>
-                        <div data-aos="fade-left" class="card">
+                        <div data-aos="fade-down" class="card">
                             <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-shield-halved"></i>
@@ -160,7 +161,7 @@
                                 </h3>
                             </div>
                         </div>
-                        <div data-aos="fade-right" class="card">
+                        <div data-aos="fade-down" class="card">
                             <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-suitcase"></i>
@@ -170,7 +171,7 @@
                                 </h3>
                             </div>
                         </div>
-                        <div data-aos="fade-left" class="card">
+                        <div data-aos="fade-up" class="card">
                             <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-chart-simple"></i>
@@ -180,7 +181,7 @@
                                 </h3>
                             </div>
                         </div>
-                        <div data-aos="fade-right" class="card">
+                        <div data-aos="fade-up" class="card">
                             <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-compass"></i>
@@ -190,7 +191,7 @@
                                 </h3>
                             </div>
                         </div>
-                        <div data-aos="fade-left" class="card">
+                        <div data-aos="fade-up" class="card">
                             <div class="card-body">
                                 <h2>
                                     <i class="fa-solid fa-file-lines"></i>
@@ -222,8 +223,8 @@
                     </p>
                 </article>
                 <article class="col-b">
-                    <div class="gallery">
-                        <div data-aos="fade-down" class="gallery-item">
+                    <div data-aos="fade-down" class="gallery">
+                        <div class="gallery-item">
                             <img src="./assets/img/projects/tinified/workspace_with_macbook.jpg"
                                 alt="workspace_with_macbook">
                             <div class="label-img">
@@ -235,7 +236,7 @@
                                 </h5>
                             </div>
                         </div>
-                        <div data-aos="fade-down" class="gallery-item">
+                        <div class="gallery-item">
                             <img src="./assets/img/projects/tinified/free-workspace.jpg" alt="free-workspace" srcset="">
                             <div class="label-img">
                                 <h4>
@@ -246,7 +247,7 @@
                                 </h5>
                             </div>
                         </div>
-                        <div data-aos="fade-down" class="gallery-item">
+                        <div class="gallery-item">
                             <img src="./assets/img/projects/tinified/modern-workspace.jpg" alt="free-workspace"
                                 srcset="">
                             <div class="label-img">
@@ -258,7 +259,7 @@
                                 </h5>
                             </div>
                         </div>
-                        <div data-aos="fade-down" class="gallery-item">
+                        <div class="gallery-item">
                             <img src="./assets/img/projects/tinified/bench-accounting.jpg" alt="free-workspace"
                                 srcset="">
                             <div class="label-img">
@@ -270,7 +271,7 @@
                                 </h5>
                             </div>
                         </div>
-                        <div data-aos="fade-down" class="gallery-item">
+                        <div class="gallery-item">
                             <img src="./assets/img/projects/tinified/office-workspace.jpg" alt="free-workspace"
                                 srcset="">
                             <div class="label-img">
@@ -504,6 +505,7 @@
             </p>
         </section>
     </footer>
+    <a class="backToTop" href="#"><i class="fa-solid fa-square-caret-up"></i></a>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
